Update README.md
Added a way to run the .jar if it doesn't work